# Qt6_VisualStudioCode_HelloWorld

sources/: CMakeLists.txt  main.cpp
